--- a/src/components/ScoreCard/style.css
+++ b/src/components/ScoreCard/style.css
@@ -5,16 +5,19 @@
     line-height: 1em;
     padding: 0;
     margin: 0;
+    font-family: 'WaltographRegular';
 }
 
 h3.score {
     margin-top: 5px;
     padding: 0;
     font-weight: 600;
+    font-family: 'WaltographRegular';
 }
 
 h3.status {
     margin: 0;
     padding: 0;
     color: red;
+    font-family: 'WaltographRegular';
 }
